# chess-project-main

./: .gitignore  docker-compose.yml  package-lock.json  package.json
client/: package-lock.json  package.json
client/src/components/: chessBoard.svelte
client/src/components/ChessGame/: chessGame.svelte  chessGame.ts
client/src/components/Header/: header.svelte
client/src/lib/: index.ts  store.ts
client/src/lib/useFetch/: index.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/login/: +page.svelte
frontend/: Dockerfile  package-lock.json
frontend/src/: App.js  ChessBoard.js  Login.js  Main.css  Main.js  PieceImage.js  api.js  styles.css
server/: Dockerfile  pyproject.toml  requirements.txt
server/src/: main.py
server/src/database/: __init__.py  crud.py  models.py  schemas.py
server/src/routers/: auth.py  user.py
server/src/services/: auth_service.py  chess_service.py
server/src/utils/: connection_manager.py  game.py  matchmaker.py
